Stop wrapping the claim card header section
This is to ensure the status tag is always on the top-right corner of the card.

--- a/app/assets/stylesheets/components/claim/card.scss
+++ b/app/assets/stylesheets/components/claim/card.scss
@@ -10,7 +10,7 @@
     display: flex;
     justify-content: space-between;
     align-items: flex-start;
-    flex-wrap: wrap;
+    gap: govuk-spacing(2);
 
     .claim-card__header__name {
       display: flex;
